hard-gists/8219574/run.log
=== Docker Run Log for 8219574 ===
Started at: Mi 29. Okt 17:41:23 CET 2025

[2025-10-29 17:41:23] START: Running container for 8219574
[2025-10-29 17:41:23] SUCCESS: Container dd0a22cd57fb2761306752e2eb096324d611d07ac2bddb5bbbc5aed7af598be8 started for 8219574
=== Container logs for 8219574 ===
  File "/snippet.py", line 34
    print "\tfound %s %s's game %s"%(uid,author,title)  
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8219574 ===
[2025-10-29 17:41:25] INFO: Container dd0a22cd57fb2761306752e2eb096324d611d07ac2bddb5bbbc5aed7af598be8 has stopped
